cilium-policy-no-mutual-auth.yml
cat <<EOF | kubectl apply  -f -
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: mutual-auth-sample
spec:
  endpointSelector:
    matchLabels:
      app: server      
  ingress:
  - fromEndpoints:
    - matchLabels:
        app: client
    toPorts:
    - ports:
      - port: "8080"
        protocol: TCP
      rules:
        http:
        - method: "GET"
          path: "/computer"
EOF
